--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,11 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Ejemplos CSS y DIV</title>
 </head>
+
 <body>
-    <h1>Ejemplo CSS</h1>
+    <div id="div1">div1</div>
+    <div id="div2">div2</div>
+    <div id="div3">div3</div>
 </body>
+
 </html>
